# Feedback

./: CMakeLists.txt
res/: MainWindow.ui  feedbacker.sqlite
src/: Course.cpp  Course.h  DBClient.cpp  DBClient.h  ErrorHandler.h  Feedback.h  Mailclient.cpp  Mailclient.h  Model.cpp  Model.h  Student.cpp  Student.h  StudentManager.cpp  StudentManager.h  main.cpp
src/GUI/: AboutDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewCourseDialog.cpp  NewCourseDialog.h  NewCourseDialog.ui  NewStudentDialog.cpp  NewStudentDialog.h  NewStudentDialog.ui  StudentsModel.cpp  StudentsModel.h  StudentsWindow.cpp  StudentsWindow.h  StudentsWindow.ui
src/presistent/: CourseInfo.h  Student.cpp  Student.h
tests/: TestTesting.cpp  TestTesting.h  runTest.cpp
